data/derived/comb/progs/unify/prog1574.ml.out
Characters 114-117:
  let shift= mulByDigit mul ac in 
                        ^^^
Error: This expression has type int list
       but an expression was expected of type int
